# cpp-notes

./: .clang-format  CMakeLists.txt  singleton
basics/: CMakeLists.txt  move.cpp  unique_ptr.cpp
patterns/: CMakeLists.txt
patterns/creational/: builder.cpp  singleton.cpp
src/algorithms/: sorting.cpp
src/basics/: move.cpp  shared_ptr.cpp  unique_ptr.cpp
src/fsm/: variant_fsm.cpp
src/patterns/creational/: abstract_factory.cpp  builder.cpp  builder_1.cpp  builder_2.cpp  factory_method.cpp  prototype.cpp  singleton.cpp
src/patterns/structural/: adapter.cpp
